<resources>
    <string name="app_name">LECO</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="resep">Nama Makanan</string>
    <string name="ket">Keterangan</string>
    <string name="step">Tahapan</string>
    <string name="camera">Tahapan</string>
    <string name="alatbahan">Alat dan Bahan</string>
    <string name="loginhere">Click <u>Here</u> To Login</string>
    <string name="signup_here">Click Here to Sign Up!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recipe">My Recipes</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="search">Search</string>
</resources>