<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".Account">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updatename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_name"
                android:drawableRight="@drawable/ic_name"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="textPersonName"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email"
                android:drawableRight="@drawable/ic_email"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="textEmailAddress"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updatepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_password"
                android:drawableRight="@drawable/ic_password"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="textPassword"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updatepassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_password"
                android:drawableRight="@drawable/ic_password"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="textPassword"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pathLinear"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/constraintlayout">
        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pathLinear2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pathLinear">
        <Button
            android:id="@+id/btnLogout"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:text="@string/log_out"
            app:layout_constraintTop_toBottomOf="@+id/pathLinear" />
    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        app:itemBackground="@color/colorAccent"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>